Media Viewer: Fix ghost animation clipping (#7037)

--- a/src/components/gili/layout/Surface.module.scss
+++ b/src/components/gili/layout/Surface.module.scss
@@ -1,27 +1,26 @@
-@use '../../../styles/mixins';
-
 @layer ui.layout {
   .root {
-    --surface-inline-padding: 1rem;
+    --surface-inline-padding: 1rem 1rem;
+    --surface-breakout-margin: -1rem -1rem;
 
     padding-inline: var(--surface-inline-padding);
     background-color: var(--color-background-secondary);
   }
 
   .scrollable {
+    --surface-inline-padding: 1rem calc(max(1rem - var(--scrollbar-width), 0px));
+    --surface-breakout-margin: -1rem calc(0rem - max(1rem - var(--scrollbar-width), 0px));
+
     scrollbar-gutter: stable;
     overflow-y: auto;
-
-    @include mixins.adapt-padding-to-scrollbar(var(--surface-inline-padding));
   }
 
   .noPadding {
-    --surface-inline-padding: 0rem;
-
-    padding-inline: 0;
+    --surface-inline-padding: 0rem 0rem;
+    --surface-breakout-margin: 0rem 0rem;
   }
 
   .breakout {
-    margin-inline: calc(-1 * var(--surface-inline-padding, 0rem));
+    margin-inline: var(--surface-breakout-margin, 0rem 0rem);
   }
 }
