--- a/src/components/middle/message/SponsoredMessage.scss
+++ b/src/components/middle/message/SponsoredMessage.scss
@@ -52,7 +52,7 @@
     --border-top-left-radius: var(--border-radius-messages);
     --border-top-right-radius: var(--border-radius-messages);
     --border-bottom-right-radius: var(--border-radius-messages);
-    --surface-inline-padding: 0.5rem;
+    --surface-breakout-margin: -0.5rem;
 
     padding: 0.5rem;
 
